Facetted search UI: filter indicators, proper radio toggle, local search, filter remover etc.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -285,7 +285,7 @@
 		}, 800);
 
 		var mainContainer = $('#local-plugins');
-		$('#filter-query').on('keyup', function (e) {
+		$('#filter-query').on('input propertychange paste', function (e) {
 			var el = $(this);
 
 			// Retrieve the input field text and reset the count to zero
