--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/SingleSelect.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/SingleSelect.cshtml
@@ -8,11 +8,13 @@
 	{
 		if (facet.HitCount > 0)
 		{
-			<div class="facet-radio" data-href="@Url.FacetToggle(facet)">
+			<div class="facet-radio facet-item" data-href="@Url.FacetToggle(facet)">
 				<label>
 					<input class="facet-control-native" type="radio" name="optradio" value="@facet.Value.ToString()" @Html.Attr("checked", "checked", facet.Value.IsSelected)>
 					<span class="facet-control-ui"></span>
-					<span class="facet-label" @Html.Attr("data-count", facet.HitCount.ToString("N0"), facet.HitCount > 0)>@(facet.Value.Label ?? facet.Value.ToString())</span>
+					<span class="facet-label" @Html.Attr("data-count", facet.HitCount.ToString("N0"), facet.HitCount > 0)>
+						@(facet.Value.Label ?? facet.Value.ToString())
+					</span>
 				</label>
 			</div>
 		}
