--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
@@ -6,7 +6,7 @@
 	var labelStyle = GetThemeVariable<string>("shopbar-label", "warning");
 }
 
-<div class="offcanvas-cart-header">
+<div class="offcanvas-cart-header offcanvas-tabs">
     <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
         @if (Model.ShoppingCartEnabled) 
         {
