Slight selector display alteration in header menu

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
@@ -179,6 +179,10 @@
 
 .menubar-section {
     border-bottom: 1px solid #ddd;
+
+    .abbreviation {
+        text-transform: uppercase;
+    }
 }
 
 .menubar {
