--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -633,8 +633,11 @@ a.pretty-link {
 }
 
 .choice-box-group {
-    $choice-box-padding: 0.1rem;
-    $choice-box-size: 2.8rem;
+    $choice-box-padding:        0.2rem;
+    $choice-box-size:           2.8rem;
+    $choice-box-size-lg:        4rem;
+    $choice-box-size-sm:        1.5rem;
+    $choice-box-size-xl:        6rem;
 
 	margin: 0;
 	padding: 0;
@@ -642,12 +645,15 @@ a.pretty-link {
     position: relative;
     margin: 0 ($choice-box-padding * -1);
 
+    @include clearfix();
+
 	.choice-box {
         position: relative;
-        display: inline-block;
-        padding: 0;
-        margin: $choice-box-padding;
-        margin-bottom: $choice-box-padding * 2;
+        float: left;
+        display: block;
+        //padding: 0;
+        padding: $choice-box-padding;
+        //padding-bottom: $choice-box-padding * 2;
 	}
 
     .choice-box-label {
@@ -658,8 +664,6 @@ a.pretty-link {
         position: relative;
 		display: block;
         cursor: pointer;
-        //outline: 3px solid transparent;
-        //transition: outline-color 0.1s linear;
 	}
 
 	.choice-box-element {
@@ -694,8 +698,10 @@ a.pretty-link {
         }
 	}
 
-	.selected .choice-box-content {
-        //outline-color: rgba(0,0,0, 0.15);
+	.choice-box-control-native:checked + .choice-box-content {
+        .choice-box-element {
+            border-color: rgba(0,0,0, 0.7);
+        }
 
         &:after {
             box-sizing: content-box;
@@ -721,12 +727,30 @@ a.pretty-link {
         }
 	}
 
-    .selected .choice-box-element {
-        border-color: rgba(0,0,0, 0.7);
-    }
-
-	.choice-box-radio {
+	.choice-box-control-native {
 		display: none !important;
 	}
+
+    // Choice box sizing
+    &.choice-box-group-xl .choice-box-element {
+        height: $choice-box-size-xl;
+        line-height: $choice-box-size-xl;
+        min-width: $choice-box-size-xl;
+        .choice-box-img { max-width: calc(#{$choice-box-size-xl} - 4px); }       
+    }
+
+    &.choice-box-group-lg .choice-box-element {
+        height: $choice-box-size-lg;
+        line-height: $choice-box-size-lg;
+        min-width: $choice-box-size-lg;
+        .choice-box-img { max-width: calc(#{$choice-box-size-lg} - 4px); }          
+    }
+
+    &.choice-box-group-sm .choice-box-element {
+        height: $choice-box-size-sm;
+        line-height: $choice-box-size-sm;
+        min-width: $choice-box-size-sm;
+        .choice-box-img { max-width: calc(#{$choice-box-size-sm} - 4px); }          
+    }
 }
 
