--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateAttributeCombinationPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateAttributeCombinationPopup.cshtml
@@ -52,15 +52,21 @@
                 @Html.SmartLabelFor(model => model.AssignedPictureIds)
             </td>
             <td class="adminData">
-                @foreach (var x in Model.AssignablePictures)
-                {
-                    <div class="pull-left" style="min-width:80px; min-height:65px; margin:1px 25px 1px 0;">
-                        <label class="x-checkbox">
-                            <input type="checkbox" name="AssignedPictureIds" value="@x.Id" @Html.Attr("checked", "checked", x.IsAssigned) />
-                            <img src="@x.PictureUrl" style="max-width:50px; max-height:50px; vertical-align:middle;" />
-                        </label>
-                    </div>
-                }
+				<ul class="choice-box-group choice-box-group-xl" id="assigned-pictures" style="margin-bottom: 10px">
+					@foreach (var x in Model.AssignablePictures)
+					{
+						<li class="choice-box">
+							<label class="choice-box-label">
+								<input type="checkbox" class="choice-box-control-native" id="product_attribute_2990_0_10_403_1402" name="AssignedPictureIds" value="@x.Id" @Html.Attr("checked", "checked", x.IsAssigned)>
+								<span class="choice-box-content">
+									<span class="choice-box-element">
+										<img class="choice-box-img" src="@x.PictureUrl" alt="">
+									</span>
+								</span>
+							</label>
+						</li>
+					}
+				</ul>
             </td>
         </tr>
         <tr>
