--- a/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.Active.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.Active.cshtml
@@ -28,7 +28,7 @@
 		}
 		<li class="active-filter-item active-filter-item-clear">
 			<a class="btn btn-secondary btn-to-danger btn-flat btn-sm active-filter-link" href='@Url.FacetRemove(activeFilters)'>
-				<span class="active-filter-label fw-600">@T("Search.Facet.RemoveAllFilters")</span>
+				<span class="active-filter-label">@T("Search.Facet.RemoveAllFilters")</span>
 			</a>
 		</li>
 	</ul>
