Theming: several CSS tweaks

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -34,7 +34,7 @@
         <div class="row xs-gutters justify-content-around flex-nowrap">
             <div class="col-xs hidden-xs-up">
                 <div id="ocm-currency-selector" class="mf-dropdown">
-                    <button class="btn btn-grey btn-labeled icon-right btn-block text-xs-left">
+                    <button class="btn btn-grey btn-labeled icon-right btn-block text-xs-left text-uppercase">
                         <span data-bind="name"></span>
                         <b><i class="fa fa-caret-down"></i></b>
                     </button>
@@ -44,7 +44,7 @@
                 
             <div class="col-xs hidden-xs-up">
                 <div id="ocm-language-selector" class="mf-dropdown">
-                    <button class="btn btn-grey btn-labeled icon-right btn-block text-xs-left">
+                    <button class="btn btn-grey btn-labeled icon-right btn-block text-xs-left text-uppercase">
                         <span data-bind="name"></span>
                         <b><i class="fa fa-caret-down"></i></b>
                     </button>
