Search: A (selected) filter must be rendered even if the hit count is zero. A user must always be able to unselect a filter regardless of any search hits.

--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/MultiSelect.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/MultiSelect.cshtml
@@ -3,8 +3,8 @@
 @using SmartStore.Core.Search.Facets
 @using SmartStore.Services.Search.Extensions;
 
-@{ 
-	var facets = Model.Facets.Where(x => x.HitCount > 0).ToList();
+@{
+	var facets = Model.Facets.ToList();
 }
 
 @if (facets.Count > 7)
