--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -2,7 +2,7 @@
 	var labelStyle = GetThemeVariable<string>("shopbar-label", "warning");
 }
 
-<div class="ocm-home-layer">
+<div class="ocm-home-layer layer in" data-id="0">
 
     <div class="offcanvas-menu-header offcanvas-tabs">
         <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
