--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/LanguageSelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/LanguageSelector.cshtml
@@ -11,7 +11,7 @@
 
     <div class="dropdown language-selector">
         <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-			<span>@activeLang.SeoCode</span>
+			<span>@activeLang.SeoCode.ToUpper()</span>
             <i class="fa fa-caret-down"></i>
         </a>
         
@@ -21,7 +21,7 @@
                 var href = webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + Url.Encode(Model.ReturnUrls[lang.SeoCode]), null);
                 <a href="@href" title="@lang.NativeName" data-toggle="tooltip" rel="nofollow" class="dropdown-item" data-selected="@(lang.Equals(activeLang) ? "true" : "false")">
                     @lang.Name
-                    <span class="abbreviation">(@lang.SeoCode)</span>
+                    <span class="abbreviation">(@lang.SeoCode.ToUpper())</span>
                 </a>
             }
         </div>
